12-ITSM/deployment-strategies/strategies/4-canary/virtualservice-50-50.yaml
# Canary Phase 3: 50-50 split
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sample-app
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: sample-app
            subset: v1
            port:
              number: 80
          weight: 50
        - destination:
            host: sample-app
            subset: v2
            port:
              number: 80
          weight: 50
